--- a/contact.html
+++ b/contact.html
@@ -7,23 +7,21 @@
     <title>Contact</title>
 </head>
 
+<body>
+
 <h1>Contact</h1>
 <nav>
-        <li>
-            <ul><a href="./index.html">Index</a></ul>
-            <ul><a href="../Rocketseat/contact.html">Images</a></ul>
-        </li>
-        <h2>Contato</h2>
-        <li>
-            <ul>guilhermeabraob@hotmail.com</ul>
-            <ul>(11)97221-5007</ul>
-        </li>
+    <ul>
+        <li><a href="file/images.html">Images</a></li>
+        <li><a href="index.html">Index</a></li> 
+    </ul>
 </nav>
 
-<body>
-    <br>
-   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas repellendus iure veniam laudantium consequatur numquam nesciunt commodi, in, consequuntur cumque fuga repellat aperiam temporibus est perspiciatis tempore ad fugiat? Cumque?</p>
-   <br> 
-   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati quis nisi ducimus ipsa eos optio. Iste quas accusantium asperiores consequuntur qui dolorum possimus consectetur distinctio delectus, blanditiis eius eligendi repellat.</p>
+<h2>Fale comigo!</h2>
+<ul>
+    <li>guilhermeabraob@hotmail.com</li>
+    <li>(11)99999-9999</li>
+</ul>
+
 </body>
 </html>
