--- a/index.html
+++ b/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Index</title>
 </head>
+
+<h1>Index</h1>
+<nav>
+    <ul>
+            <li><a href="../Rocketseat/file/images.html">Images</a></li>
+            <li><a href="./contact.html">Contact</a></li>
+    </ul>
+</nav>
+
 <body>
-    
+    <br>
+   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas repellendus iure veniam laudantium consequatur numquam nesciunt commodi, in, consequuntur cumque fuga repellat aperiam temporibus est perspiciatis tempore ad fugiat? Cumque?</p>
+   <br> 
+   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati quis nisi ducimus ipsa eos optio. Iste quas accusantium asperiores consequuntur qui dolorum possimus consectetur distinctio delectus, blanditiis eius eligendi repellat.</p>
 </body>
 </html>
