--- a/Desafios/social.media.html
+++ b/Desafios/social.media.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="social.media.html">
+    <link rel="stylesheet" href="styles.social.media.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&family=Montserrat:wght@100&family=Noto+Sans+JP:wght@900&family=Permanent+Marker&family=Poppins:ital,wght@0,100;1,100&family=Shadows+Into+Light&family=Source+Sans+Pro:wght@200&display=swap" rel="stylesheet">
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div>
-        <img src="../file/IMG_0327.JPG" alt="">
-    </div>  
-</body>
+        <img class="imagem_perfil" src="../file/IMG_0327.JPG" alt="Imagem Perfil">
+    </div>
+    </body>
 </html>
