--- a/Desafios/social-media.html
+++ b/Desafios/social-media.html
@@ -15,7 +15,7 @@
         <div class="container-tree">
 
             <div class="foto-perfil">
-                <img src="../file/IMG_0327.JPG" alt="Imagem Perfil">
+                <img class="round-image" src="../file/IMG_0327.JPG" alt="Imagem Perfil">
             </div>
 
             <span class="insta-user">@guilhermeabraob
@@ -23,10 +23,12 @@
             </span>
 
             <div class="link-tree">
-            <a href="https://www.instagram.com/guilhermeabraob/">Instagram</a>
-            <a href="https://www.linkedin.com/in/guilherme-abr%C3%A3o-b-ba1872108/">Linkedin</a>
-            <a href="https://twitter.com/guilhermeabraob">Twitter</a>
-            <a href="https://github.com/guilhermeabraob">Github</a>
+                <ul>
+                    <li><a href="https://www.instagram.com/guilhermeabraob/">Instagram</a></li>
+                    <li><a href="https://www.linkedin.com/in/guilherme-abr%C3%A3o-b-ba1872108/">Linkedin</a></li>
+                    <li><a href="https://twitter.com/guilhermeabraob">Twitter</a></li>
+                    <li><a href="https://github.com/guilhermeabraob">Github</a></li>
+                </ul>
             </div>
 
             <div class="social-icons">
@@ -34,9 +36,7 @@
             <a href="https://www.linkedin.com/in/guilherme-abr%C3%A3o-b-ba1872108/"><img src="./assets/linkedin.svg" alt=""></a>
             <a href="https://twitter.com/guilhermeabraob"><img src="./assets/twitter.svg" alt=""></a>
             <a href="https://github.com/guilhermeabraob"><img src="./assets/github.svg"alt=""></a>
-            </div>
-
-
+        </div>
     </div>
     
     
