--- a/Desafios/quiz.html
+++ b/Desafios/quiz.html
@@ -11,9 +11,81 @@
     <form action="Quiz">
         <h1>Quiz</h1>
         <hr>
-        <ul>
-            
-        </ul>
+        <ol>
+            <h3>Pergunta 1</h3>
+            <div>
+                <input type="radio" name="question-1" id="question-1-a" value="A">
+                <label for="question-1-a">A) Opção 1</label>
+            </div>
+            <div>
+                <input type="radio" name="question-1" id="question-1-b" value="B">
+                <label for="question-1-b">B) Opção 2</label>
+            </div>
+            <div>
+                <input type="radio" name="question-1" id="question-1-c" value="C">
+                <label for="question-1-c">C) Opção 3</label>
+            </div>
+            <div>
+                <input type="radio" name="question-1" id="question-1-d" value="D">
+                <label for="question-1-d">D) Opção 4</label>
+            </div>
+
+            <h3>Pergunta 2</h3>
+            <div>
+                <input type="radio" name="question-2" id="question-2-a" value="A">
+                <label for="question-2-a">A) Opção 1</label>
+            </div>
+            <div>
+                <input type="radio" name="question-2" id="question-2-b" value="B">
+                <label for="question-2-b">B) Opção 2</label>
+            </div>
+            <div>
+                <input type="radio" name="question-2" id="question-2-c" value="C">
+                <label for="question-2-c">C) Opção 3</label>
+            </div>
+            <div>
+                <input type="radio" name="question-2" id="question-2-d" value="">
+                <label for="question-2-d">D) Opção 4</label>
+            </div>
+
+            <h3>Pergunta 3</h3>
+            <div>
+                <input type="radio" name="question-3" id="question-3-a" value="A">
+                <label for="question-3-a">A) Opção 1</label>
+            </div>
+            <div>
+                <input type="radio" name="question-3" id="question-3-b" value="B">
+                <label for="question-3-b">B) Opção 2</label>
+            </div>
+            <div>
+                <input type="radio" name="question-3" id="question-3-c" value="C">
+                <label for="question-3-c">C) Opção 3</label>
+            </div>
+            <div>
+                <input type="radio" name="question-3" id="question-3-d" value="D">
+                <label for="question-3-d">D) Opção 4</label>
+            </div>
+
+            <h3>Pergunta 4</h3>
+            <div>
+                <input type="radio" name="question-4" id="question-4-a" value="A">
+                <label for="question-4-a">A) Opção 1</label>
+            </div>
+            <div>
+                <input type="radio" name="question-4" id="question-4-b" value="B">
+                <label for="question-4-b">B) Opção 2</label>
+            </div>
+            <div>
+                <input type="radio" name="question-4" id="question-4-c" value="C">
+                <label for="question-4-c">C) Opção 3</label>
+            </div>
+            <div>
+                <input type="radio" name="question-4" id="question-4-a" value="D">
+                <label for="question-4-d">D) Opção 4</label>
+            </div>
+            <br>
+            <button>Enviar</button>
+        </ol>
     </form>   
 </body>
 </html>
