--- a/JS/index.html
+++ b/JS/index.html
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./script.js"></script>
+    <script>
+        var name
+
+        name = "Gui"
+
+        console.log(typeof name)
+    </script>
 </body>
 </html>
