--- a/JS/index.html
+++ b/JS/index.html
@@ -7,12 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script>
-        var name
-
-        name = "Gui"
-
-        console.log(typeof name)
-    </script>
+    <script src="./script.js"></script>
 </body>
 </html>
