--- a/HTML e CSS/Importancia das Tags.html
+++ b/HTML e CSS/Importancia das Tags.html
@@ -5,11 +5,11 @@
     <aside>
     <footer>
 
-* Header:Normalmente vem no in[icio da pág e é visto como GLOBAL. Pode ser usado em outros elementos semânticos como: article ou section. Podemos usar mais de um header na pág e ele não passui atributos especificos.
+* Header:Normalmente vem no inicio da pág e é visto como GLOBAL. Pode ser usado em outros elementos semânticos como: article ou section. Podemos usar mais de um header na pág e ele não passui atributos especificos.
 Obs: Quando o header é utilizado, ele ocupa a linha por completo da pág. 
 
 
-* Nav: Ferramenta de navegação que normalmento nos levam a outras págs. Ela pode ser usado em qualquer lugar da pág, e também, pode ter mais de uma na mesma pág. Usualmente, nós utilizamos uma nav global e outras dentros de outros elementos da pag.  
+* Nav: Ferramenta de navegação que normalmente nos levam a outras págs. Ela pode ser usado em qualquer lugar da pág, e também, pode ter mais de uma na mesma pág. Usualmente, nós utilizamos uma nav global e outras dentros de outros elementos da pag.  
 
 *Main: Ferramenta usada para o conteúdo principal da pág, não usamos mais de um Main na pág, apenas um! Ele deve ser digitado dentro do <body>. Não possui atributos específicos, somente globais. 
 
@@ -27,7 +27,7 @@ Ele só pode ser usado com atributos globais.
 *Footer: Geralmente usado no final da pág com: informações do autor, contao, sitemap, voltar ao topo.
 atributos: globais. 
 
-*Section: utilizado também para relacionar algo ao conteúdo principal. Caso haja um conteudo repetitivo, por exemple, uma receita de bolo, devemos usar um article e dentro do article usamos o SECTION:
+*Section: utilizado também para relacionar algo ao conteúdo principal. Caso haja um conteudo repetitivo, por exemplo, uma receita de bolo, devemos usar um article e dentro do article usamos o SECTION:
 
 <article>
     <h2>receita 1</h2>
