--- a/HTML e CSS/Importancia das Tags.html
+++ b/HTML e CSS/Importancia das Tags.html
@@ -2,6 +2,7 @@
     <header>
     <nav>
     <main>
+    <article>
     <aside>
     <footer>
 
@@ -24,7 +25,7 @@ Obs: Quando o header é utilizado, ele ocupa a linha por completo da pág.
 
 Ele só pode ser usado com atributos globais. 
 
-*Footer: Geralmente usado no final da pág com: informações do autor, contao, sitemap, voltar ao topo.
+*Footer: Geralmente usado no final da pág com: informações do autor, contato, sitemap, voltar ao topo.
 atributos: globais. 
 
 *Section: utilizado também para relacionar algo ao conteúdo principal. Caso haja um conteudo repetitivo, por exemplo, uma receita de bolo, devemos usar um article e dentro do article usamos o SECTION:
